# BUTLER

./: .gitignore  README.md  get_func.py  get_func2.py  patch_provider.py  pyproject.toml  requirements.txt  spotify_integration.md  test_api.py  vercel.json
.agents/rules/: depth-research.md
.butler/: butler.sqlite3  config.json
.butler_run/: butler.sqlite3  config.json
api/: butler.py  cron.py  requirements.txt
butenv/Scripts/: activate  activate.bat
src/butler/: cli.py  cli_menu.py  config.py  db.py  gui.py  paths.py  sandbox.py  telegram_bot.py
src/butler/agent/: __init__.py  loop.py  memory.py  parsing.py  plan.py  prompting.py  provider.py  schema.py  watcher.py
src/butler/tools/: __init__.py  base.py  registry.py
src/butler/tools/impl/: __init__.py  files.py  github.py  index.py  notes.py  os_control.py  reminders.py  skills.py  spotify_control.py  system.py  telegram_msg.py  weather.py  web.py
src/butler/voice/: engine.py  normalize.py
src/butler/web_ui/: index.html  qwebchannel.js
tests/: test_agent_loop_hardening.py  test_agent_parse.py  test_butler_sim.py  test_db_flush_turn.py  test_dual_mode_router.py  test_files_search.py  test_files_search_summarization.py  test_gui_clicks.py  test_live.py  test_mic.py  test_mics.py  test_notes.py  test_pdf_indexing.py  test_persona_weather.py  test_provider_retry.py  test_pygame_mic.py  test_record.py  test_sandbox.py  test_voice_spotify_hardening.py  test_weather_current.py  test_web_search_cache.py
