[project]
name = "butler-assistant"
version = "0.1.0"
description = "BUTLER — local-first AI assistant (Ollama + SQLite)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "typing-extensions>=4.10.0",
    "ddgs>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "spotipy>=2.24.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
butler = "butler.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/butler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
